Update Portfolio with Latest Projects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Teh Hui Yi</h1>
-								<p>Hello, I'm Hui Yi, a third-year undergraduate pursuing a degree in computer science with a specialization in data analytics and AI at the Singapore University of Technology and Design. Welcome to my portfolio, where you can explore both my academic project and working experiences.
+								<p>Hello, I'm Hui Yi, a final-year undergraduate student pursuing a degree in computer science with a specialization in data analytics and AI at the Singapore University of Technology and Design (SUTD). Welcome to my portfolio, where you can explore both my academic projects and working experiences.
 								</p>
 							</div>
 						</div>
@@ -45,6 +45,9 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<h3 class="major">ST Engineering Urban Solutions Ltd. (May 2024 - Sep 2024)</h3>
+								<span class="image main"><img src="images/stengineeringInternship.png" alt="" /></span>
+								<p></p>
 								<h3 class="major">ST Engineering Urban Solutions Ltd. (Sep 2023 - Jan 2024)</h3>
 								<span class="image main"><img src="images/stengineeringInternship.png" alt="" /></span>
 								<p>During my internship at ST Engineering Urban Solutions Ltd., I successfully implemented a highly efficient Python script to automate the processing of a sizable dataset, comprising around 30,000 rows. This script not only eliminated the need for manual intervention but also significantly reduced the processing time from 1 or 2 days to a mere 22 minutes. The implementation led to a remarkable enhancement in overall workflow efficiency. Additionally, I played a pivotal role in the implementation of car image annotation, contributing to the improvement of machine learning models by enhancing their understanding of diverse visual elements. Moreover, I adopted an iterative approach to license plate verification, embodying continuous improvement principles to optimize accuracy and reliability in both machine learning and deep learning models.</p>
