Update folder name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Teh Hui Yi</h1>
-								<p>Hello, I'm Hui Yi, a final-year undergraduate student pursuing a degree in computer science with a specialization in data analytics and AI at the Singapore University of Technology and Design (SUTD). Welcome to my portfolio, where you can explore both my academic projects and working experiences.
+								<p>Hello, I'm Hui Yi, a recent-graduate pursuing a degree in computer science with a minor in AI at the Singapore University of Technology and Design (SUTD). Welcome to my portfolio, where you can explore both my academic projects and working experiences.
 								</p>
 							</div>
 						</div>
@@ -64,7 +64,7 @@
 						<!-- Project -->
 							<article id="project">
 								<h2 class="major">Project</h2>
-								<h3 class="major">Smart Pillbox (Sep 2024 - Dec 2024)</h3>
+								<h3 class="major">Smart Pillbox (Sep 2024 - Dec 2024)</h3> 
 								<p>This project aimed to develop a Smart IoT Pillbox that enables continuous monitoring of elderly medication adherence. The solution provides physical and digital reminders for medication intake, allows caregivers to remotely track adherence in real time, and sends refill notifications when medication is consumed. The system combines hardware and cloud-based IoT services to enhance medication management and ensure timely alerts. My contributions involved both hardware integration and cloud-based IoT implementation. I integrated a weight sensor with a Raspberry Pi, wiring a load cell and amplifier to the appropriate GPIO pins. I configured the Raspberry Pi to communicate with AWS IoT Core by installing certificates and the AWS IoT Device SDK, ensuring secure connectivity. I designed an AWS IoT rule to insert and update medication data, such as intake status and pillbox ID, in a DynamoDB table. To automate monitoring, I implemented a scheduled AWS Lambda function using EventBridge, which periodically scanned the database and sent alerts via MQTT if adherence was not met. Additionally, I developed and deployed a Python script (mqtt_client.py) on the Raspberry Pi to read weight sensor data and publish it to AWS MQTT topics. To streamline deployment and ensure consistency, I containerized the solution using Docker. These contributions enhanced the system's efficiency and reliability, offering a scalable solution to improve medication adherence for elderly users.</p>
 								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Smart%20Pillbox">here</a> to take a look on this project and <a href="https://youtu.be/1TFeuhNtHeM">here</a> for the demonstration video.</p>
 								<h3 class="major">Plant Disease Detection (Sep 2024 - Dec 2024)</h3>
@@ -84,15 +84,15 @@
 								<h3 class="major">SuRe (May 2023 - Aug 2023)</h3>
 								<span class="image main"><img src="images/SURE.png" alt="" /></span>
 								<p>This project focused on establishing a web-based retail invoice data management system. Utilizing Optical Character Recognition (OCR), the system converts physical invoices and statements of account into a customized format, facilitating seamless integration with other software applications. The web application, developed collaboratively by a team of 7 members using the Software Development Life Cycle (SDLC), not only streamlines the conversion process but also empowers retailers to efficiently track their invoice spending.</p>
-								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Web%20Application">here</a> to take a look on this project!</p>
+								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/SuRe%20(Web%20Application)">here</a> to take a look on this project!</p>
 								<h3 class="major">Grab-N-Go (Jan 2023 - Apr 2023)</h3>
 								<span class="image main"><img src="images/Grab-N-Go.png" alt="" /></span>
 								<p>In response to the persistent issue of long queues during peak hours at the SUTD canteen, the proposed Grab-N-Go mobile application aims to enhance the dining experience for students and staff. By allowing users to pre-order their meals, the application effectively reduces congestion and inconvenience. Users can conveniently select their preferred collection time slot, browse through various stores and menus, customize their orders, and seamlessly collect their food at the designated Grab-N-Go counter. The design prioritizes user-friendliness, ensuring a smoother experience for both customers and canteen vendors, ultimately creating a more efficient and pleasant dining environment.</p>
-								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Grab-N-Go">here</a> to take a look on this project!</p>
+								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Grab-N-Go%20(Mobile%20Application)">here</a> to take a look on this project!</p>
 								<h3 class="major">Chop2Pay (Jan 2023 - Feb 2023)</h3>
 								<span class="image main"><img src="images/aichallenge.jpg" alt="" /></span>
 								<p>Together with Vinny, Jamie and Le Ying as a team, we managed to get into grand final in the National AI Student Challenge 2022 with this project. Chop2pay is a Kivy application utilising Peeking Duck and YOLO object detection model to identify the products that customers place at checkouts. Thus, customer don't need to individually scan their products' barcodes. Chop2pay will automatically detect the products on the conveyor belt using a strategically-placed camera, and ring up those products within seconds.</p>
-								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Chop2pay-main">here</a> to take a look on this project!</p>
+								<p>Click <a href="https://github.com/huiyi17/tehhuiyi.github.io/tree/main/Chop2pay">here</a> to take a look on this project!</p>
 								<h3 class="major">Crop Price Prediction (Sep 2020 - Jan 2021)</h3>
 								<span class="image main"><img src="images/crop.jpg" alt="" /></span>
 								<p>In this project, we leveraged Python to observe the relationship between crop price and quantity of pesticide and herbicide used by performing data visualization. We also performed predictive analysis by building model, evaluating model with metric such as adjusted r^2 and improving the linear regression model using Machine Learning. </p>
